# Raytracer

./: .clang-tidy  CMakeLists.txt  README.md
raytracer/: raytracer.h  test.cpp
raytracer-geom/: geometry.h  intersection.h  ray.h  sphere.h  triangle.h  vector.h
raytracer-reader/: light.h  material.h  object.h  scene.h
tools/util/: util.h
